the last commit of year 2017
hi hô

--- a/VincentTran/VincentTran.csproj
+++ b/VincentTran/VincentTran.csproj
@@ -83,6 +83,7 @@
     <Compile Include="JudgeAPI\JudgeService.cs" />
     <Compile Include="JudgeAPI\ResultSubmit.cs" />
     <Compile Include="JudgeAPI\JudgeStatus.cs" />
+    <Compile Include="MachineLearning\LinearRegression.cs" />
     <Compile Include="MachineLearning\NaiveBayes.cs" />
     <Compile Include="Utilities\MyBigInteger.cs" />
     <Compile Include="Facebook\FacebookAccount.cs" />
